Trabalho 4/expr.output
Terminais sem uso na gramática

   T_FIM


Gramática

    0 $accept: Programa $end

    1 Programa: ListaFuncoes BlocoPrincipal
    2         | BlocoPrincipal

    3 ListaFuncoes: ListaFuncoes Funcao
    4             | Funcao

    5 Funcao: TipoRetorno T_ID T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES BlocoPrincipal

    7 TipoRetorno: T_VOID
    8            | T_INT
    9            | T_DOUBLE
   10            | T_STRING

   11 DeclParametros: DeclParametros T_VIRGULA Parametro
   12               | Parametro

   13 Parametro: Tipo T_ID

   14 BlocoPrincipal: T_ABRE_CHAVES Declaracoes ListaCmd T_FECHA_CHAVES
   15               | T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES

   16 Declaracoes: Declaracoes Declaracao
   17            | Declaracao

   18 Declaracao: Tipo ListaId T_PONTO_E_VIRGULA

   19 Tipo: T_INT
   20     | T_DOUBLE
   21     | T_STRING

   22 ListaId: ListaId T_VIRGULA T_ID
   23        | T_ID

   24 Bloco: T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES

   25 ListaCmd: ListaCmd Comando
   26         | Comando

   27 Comando: CmdSe
   28        | CmdEnquanto
   29        | CmdAtrib
   30        | CmdEscrita
   31        | CmdLeitura
   32        | ChamadaProc
   33        | Retorno

   34 Retorno: T_RETURN ExpressaoAritmetica T_PONTO_E_VIRGULA
   35        | T_RETURN T_LITERAL T_PONTO_E_VIRGULA

   36 CmdSe: T_IF T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES Bloco
   37      | T_IF T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES Bloco T_ELSE Bloco

   38 CmdEnquanto: T_WHILE T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES Bloco

   39 CmdAtrib: T_ID T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   40         | T_ID T_IGUAL T_LITERAL T_PONTO_E_VIRGULA

   41 CmdEscrita: T_PRINT CmdEscritaMarcadorI T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   42           | T_PRINT CmdEscritaMarcadorI T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

   43 CmdEscritaMarcadorI: %empty

   44 CmdLeitura: T_READ T_ABRE_PARENTESES T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

   45 ChamadaProc: ChamadaFuncao T_PONTO_E_VIRGULA

   46 ChamadaFuncao: T_ID T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   47              | T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES

   48 ListaParametros: ListaParametros T_VIRGULA ExpressaoAritmetica
   49                | ListaParametros T_VIRGULA T_LITERAL
   50                | ExpressaoAritmetica
   51                | T_LITERAL

   52 ExpressaoAritmetica: ExpressaoAritmetica T_ADICAO TExpressaoAritmetica
   53                    | ExpressaoAritmetica T_SUBTRACAO TExpressaoAritmetica
   54                    | ExpressaoAritmetica T_BIT_DIREITA TExpressaoAritmetica
   55                    | ExpressaoAritmetica T_BIT_ESQUERDA TExpressaoAritmetica
   56                    | TExpressaoAritmetica

   57 TExpressaoAritmetica: TExpressaoAritmetica T_MULTIPLICACAO FExpressaoAritmetica
   58                     | TExpressaoAritmetica T_DIVISAO FExpressaoAritmetica
   59                     | TExpressaoAritmetica T_RESTO FExpressaoAritmetica
   60                     | FExpressaoAritmetica
   61                     | ChamadaFuncao

   62 FExpressaoAritmetica: T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES
   63                     | T_SUBTRACAO FExpressaoAritmetica
   64                     | T_NUM
   65                     | T_ID

   66 ExpressaoLogica: ExpressaoLogica T_AND FExpressaoLogica
   67                | ExpressaoLogica T_OR FExpressaoLogica
   68                | FExpressaoLogica

   69 FExpressaoLogica: T_NOT FExpressaoLogica
   70                 | T_ABRE_PARENTESES FExpressaoLogica T_FECHA_PARENTESES
   71                 | T_TRUE
   72                 | T_FALSE
   73                 | ExpressaoRelacional

   74 ExpressaoRelacional: ExpressaoAritmetica T_MAIOR ExpressaoAritmetica
   75                    | ExpressaoAritmetica T_MENOR ExpressaoAritmetica
   76                    | ExpressaoAritmetica T_MAIOR_IGUAL ExpressaoAritmetica
   77                    | ExpressaoAritmetica T_MENOR_IGUAL ExpressaoAritmetica
   78                    | ExpressaoAritmetica T_IGUAL_IGUAL ExpressaoAritmetica
   79                    | ExpressaoAritmetica T_DIFERENTE ExpressaoAritmetica


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
T_BIT_DIREITA (258) 54
T_BIT_ESQUERDA (259) 55
T_ADICAO (260) 52
T_SUBTRACAO (261) 53 63
T_MULTIPLICACAO (262) 57
T_DIVISAO (263) 58
T_RESTO (264) 59
T_IGUAL (265) 39 40
T_ABRE_PARENTESES (266) 5 6 36 37 38 41 42 44 46 47 62 70
T_FECHA_PARENTESES (267) 5 6 36 37 38 41 42 44 46 47 62 70
T_ABRE_CHAVES (268) 14 15 24
T_FECHA_CHAVES (269) 14 15 24
T_INT (270) 8 19
T_DOUBLE (271) 9 20
T_STRING (272) 10 21
T_VOID (273) 7
T_IF (274) 36 37
T_WHILE (275) 38
T_ELSE (276) 37
T_PRINT (277) 41 42
T_READ (278) 44
T_RETURN (279) 34 35
T_ID (280) 5 6 13 22 23 39 40 44 46 47 65
T_LITERAL (281) 35 40 42 49 51
T_FIM (282)
T_NUM (283) 64
T_VIRGULA (284) 11 22 48 49
T_PONTO_E_VIRGULA (285) 18 34 35 39 40 41 42 44 45
T_AND (286) 66
T_NOT (287) 69
T_OR (288) 67
T_TRUE (289) 71
T_FALSE (290) 72
T_MAIOR_IGUAL (291) 76
T_MENOR_IGUAL (292) 77
T_DIFERENTE (293) 79
T_IGUAL_IGUAL (294) 78
T_MAIOR (295) 74
T_MENOR (296) 75


Não terminais com as regras onde eles aparecem

$accept (42)
    à esquerda: 0
Programa (43)
    à esquerda: 1 2, à direita: 0
ListaFuncoes (44)
    à esquerda: 3 4, à direita: 1 3
Funcao (45)
    à esquerda: 5 6, à direita: 3 4
TipoRetorno (46)
    à esquerda: 7 8 9 10, à direita: 5 6
DeclParametros (47)
    à esquerda: 11 12, à direita: 5 11
Parametro (48)
    à esquerda: 13, à direita: 11 12
BlocoPrincipal (49)
    à esquerda: 14 15, à direita: 1 2 5 6
Declaracoes (50)
    à esquerda: 16 17, à direita: 14 16
Declaracao (51)
    à esquerda: 18, à direita: 16 17
Tipo (52)
    à esquerda: 19 20 21, à direita: 13 18
ListaId (53)
    à esquerda: 22 23, à direita: 18 22
Bloco (54)
    à esquerda: 24, à direita: 36 37 38
ListaCmd (55)
    à esquerda: 25 26, à direita: 14 15 24 25
Comando (56)
    à esquerda: 27 28 29 30 31 32 33, à direita: 25 26
Retorno (57)
    à esquerda: 34 35, à direita: 33
CmdSe (58)
    à esquerda: 36 37, à direita: 27
CmdEnquanto (59)
    à esquerda: 38, à direita: 28
CmdAtrib (60)
    à esquerda: 39 40, à direita: 29
CmdEscrita (61)
    à esquerda: 41 42, à direita: 30
CmdEscritaMarcadorI (62)
    à esquerda: 43, à direita: 41 42
CmdLeitura (63)
    à esquerda: 44, à direita: 31
ChamadaProc (64)
    à esquerda: 45, à direita: 32
ChamadaFuncao (65)
    à esquerda: 46 47, à direita: 45 61
ListaParametros (66)
    à esquerda: 48 49 50 51, à direita: 46 48 49
ExpressaoAritmetica (67)
    à esquerda: 52 53 54 55 56, à direita: 34 39 41 48 50 52 53 54
    55 62 74 75 76 77 78 79
TExpressaoAritmetica (68)
    à esquerda: 57 58 59 60 61, à direita: 52 53 54 55 56 57 58 59
FExpressaoAritmetica (69)
    à esquerda: 62 63 64 65, à direita: 57 58 59 60 63
ExpressaoLogica (70)
    à esquerda: 66 67 68, à direita: 36 37 38 66 67
FExpressaoLogica (71)
    à esquerda: 69 70 71 72 73, à direita: 66 67 68 69 70
ExpressaoRelacional (72)
    à esquerda: 74 75 76 77 78 79, à direita: 73


Estado 0

    0 $accept: . Programa $end

    T_ABRE_CHAVES  deslocar, e ir ao estado 1
    T_INT          deslocar, e ir ao estado 2
    T_DOUBLE       deslocar, e ir ao estado 3
    T_STRING       deslocar, e ir ao estado 4
    T_VOID         deslocar, e ir ao estado 5

    Programa        ir ao estado 6
    ListaFuncoes    ir ao estado 7
    Funcao          ir ao estado 8
    TipoRetorno     ir ao estado 9
    BlocoPrincipal  ir ao estado 10


Estado 1

   14 BlocoPrincipal: T_ABRE_CHAVES . Declaracoes ListaCmd T_FECHA_CHAVES
   15               | T_ABRE_CHAVES . ListaCmd T_FECHA_CHAVES

    T_INT     deslocar, e ir ao estado 11
    T_DOUBLE  deslocar, e ir ao estado 12
    T_STRING  deslocar, e ir ao estado 13
    T_IF      deslocar, e ir ao estado 14
    T_WHILE   deslocar, e ir ao estado 15
    T_PRINT   deslocar, e ir ao estado 16
    T_READ    deslocar, e ir ao estado 17
    T_RETURN  deslocar, e ir ao estado 18
    T_ID      deslocar, e ir ao estado 19

    Declaracoes    ir ao estado 20
    Declaracao     ir ao estado 21
    Tipo           ir ao estado 22
    ListaCmd       ir ao estado 23
    Comando        ir ao estado 24
    Retorno        ir ao estado 25
    CmdSe          ir ao estado 26
    CmdEnquanto    ir ao estado 27
    CmdAtrib       ir ao estado 28
    CmdEscrita     ir ao estado 29
    CmdLeitura     ir ao estado 30
    ChamadaProc    ir ao estado 31
    ChamadaFuncao  ir ao estado 32


Estado 2

    8 TipoRetorno: T_INT .

    $padrão  reduzir usando a regra 8 (TipoRetorno)


Estado 3

    9 TipoRetorno: T_DOUBLE .

    $padrão  reduzir usando a regra 9 (TipoRetorno)


Estado 4

   10 TipoRetorno: T_STRING .

    $padrão  reduzir usando a regra 10 (TipoRetorno)


Estado 5

    7 TipoRetorno: T_VOID .

    $padrão  reduzir usando a regra 7 (TipoRetorno)


Estado 6

    0 $accept: Programa . $end

    $end  deslocar, e ir ao estado 33


Estado 7

    1 Programa: ListaFuncoes . BlocoPrincipal
    3 ListaFuncoes: ListaFuncoes . Funcao

    T_ABRE_CHAVES  deslocar, e ir ao estado 1
    T_INT          deslocar, e ir ao estado 2
    T_DOUBLE       deslocar, e ir ao estado 3
    T_STRING       deslocar, e ir ao estado 4
    T_VOID         deslocar, e ir ao estado 5

    Funcao          ir ao estado 34
    TipoRetorno     ir ao estado 9
    BlocoPrincipal  ir ao estado 35


Estado 8

    4 ListaFuncoes: Funcao .

    $padrão  reduzir usando a regra 4 (ListaFuncoes)


Estado 9

    5 Funcao: TipoRetorno . T_ID T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno . T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES BlocoPrincipal

    T_ID  deslocar, e ir ao estado 36


Estado 10

    2 Programa: BlocoPrincipal .

    $padrão  reduzir usando a regra 2 (Programa)


Estado 11

   19 Tipo: T_INT .

    $padrão  reduzir usando a regra 19 (Tipo)


Estado 12

   20 Tipo: T_DOUBLE .

    $padrão  reduzir usando a regra 20 (Tipo)


Estado 13

   21 Tipo: T_STRING .

    $padrão  reduzir usando a regra 21 (Tipo)


Estado 14

   36 CmdSe: T_IF . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES Bloco
   37      | T_IF . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES Bloco T_ELSE Bloco

    T_ABRE_PARENTESES  deslocar, e ir ao estado 37


Estado 15

   38 CmdEnquanto: T_WHILE . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES Bloco

    T_ABRE_PARENTESES  deslocar, e ir ao estado 38


Estado 16

   41 CmdEscrita: T_PRINT . CmdEscritaMarcadorI T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   42           | T_PRINT . CmdEscritaMarcadorI T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 43 (CmdEscritaMarcadorI)

    CmdEscritaMarcadorI  ir ao estado 39


Estado 17

   44 CmdLeitura: T_READ . T_ABRE_PARENTESES T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ABRE_PARENTESES  deslocar, e ir ao estado 40


Estado 18

   34 Retorno: T_RETURN . ExpressaoAritmetica T_PONTO_E_VIRGULA
   35        | T_RETURN . T_LITERAL T_PONTO_E_VIRGULA

    T_SUBTRACAO        deslocar, e ir ao estado 41
    T_ABRE_PARENTESES  deslocar, e ir ao estado 42
    T_ID               deslocar, e ir ao estado 43
    T_LITERAL          deslocar, e ir ao estado 44
    T_NUM              deslocar, e ir ao estado 45

    ChamadaFuncao         ir ao estado 46
    ExpressaoAritmetica   ir ao estado 47
    TExpressaoAritmetica  ir ao estado 48
    FExpressaoAritmetica  ir ao estado 49


Estado 19

   39 CmdAtrib: T_ID . T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   40         | T_ID . T_IGUAL T_LITERAL T_PONTO_E_VIRGULA
   46 ChamadaFuncao: T_ID . T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   47              | T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES

    T_IGUAL            deslocar, e ir ao estado 50
    T_ABRE_PARENTESES  deslocar, e ir ao estado 51


Estado 20

   14 BlocoPrincipal: T_ABRE_CHAVES Declaracoes . ListaCmd T_FECHA_CHAVES
   16 Declaracoes: Declaracoes . Declaracao

    T_INT     deslocar, e ir ao estado 11
    T_DOUBLE  deslocar, e ir ao estado 12
    T_STRING  deslocar, e ir ao estado 13
    T_IF      deslocar, e ir ao estado 14
    T_WHILE   deslocar, e ir ao estado 15
    T_PRINT   deslocar, e ir ao estado 16
    T_READ    deslocar, e ir ao estado 17
    T_RETURN  deslocar, e ir ao estado 18
    T_ID      deslocar, e ir ao estado 19

    Declaracao     ir ao estado 52
    Tipo           ir ao estado 22
    ListaCmd       ir ao estado 53
    Comando        ir ao estado 24
    Retorno        ir ao estado 25
    CmdSe          ir ao estado 26
    CmdEnquanto    ir ao estado 27
    CmdAtrib       ir ao estado 28
    CmdEscrita     ir ao estado 29
    CmdLeitura     ir ao estado 30
    ChamadaProc    ir ao estado 31
    ChamadaFuncao  ir ao estado 32


Estado 21

   17 Declaracoes: Declaracao .

    $padrão  reduzir usando a regra 17 (Declaracoes)


Estado 22

   18 Declaracao: Tipo . ListaId T_PONTO_E_VIRGULA

    T_ID  deslocar, e ir ao estado 54

    ListaId  ir ao estado 55


Estado 23

   15 BlocoPrincipal: T_ABRE_CHAVES ListaCmd . T_FECHA_CHAVES
   25 ListaCmd: ListaCmd . Comando

    T_FECHA_CHAVES  deslocar, e ir ao estado 56
    T_IF            deslocar, e ir ao estado 14
    T_WHILE         deslocar, e ir ao estado 15
    T_PRINT         deslocar, e ir ao estado 16
    T_READ          deslocar, e ir ao estado 17
    T_RETURN        deslocar, e ir ao estado 18
    T_ID            deslocar, e ir ao estado 19

    Comando        ir ao estado 57
    Retorno        ir ao estado 25
    CmdSe          ir ao estado 26
    CmdEnquanto    ir ao estado 27
    CmdAtrib       ir ao estado 28
    CmdEscrita     ir ao estado 29
    CmdLeitura     ir ao estado 30
    ChamadaProc    ir ao estado 31
    ChamadaFuncao  ir ao estado 32


Estado 24

   26 ListaCmd: Comando .

    $padrão  reduzir usando a regra 26 (ListaCmd)


Estado 25

   33 Comando: Retorno .

    $padrão  reduzir usando a regra 33 (Comando)


Estado 26

   27 Comando: CmdSe .

    $padrão  reduzir usando a regra 27 (Comando)


Estado 27

   28 Comando: CmdEnquanto .

    $padrão  reduzir usando a regra 28 (Comando)


Estado 28

   29 Comando: CmdAtrib .

    $padrão  reduzir usando a regra 29 (Comando)


Estado 29

   30 Comando: CmdEscrita .

    $padrão  reduzir usando a regra 30 (Comando)


Estado 30

   31 Comando: CmdLeitura .

    $padrão  reduzir usando a regra 31 (Comando)


Estado 31

   32 Comando: ChamadaProc .

    $padrão  reduzir usando a regra 32 (Comando)


Estado 32

   45 ChamadaProc: ChamadaFuncao . T_PONTO_E_VIRGULA

    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 58


Estado 33

    0 $accept: Programa $end .

    $padrão  aceitar


Estado 34

    3 ListaFuncoes: ListaFuncoes Funcao .

    $padrão  reduzir usando a regra 3 (ListaFuncoes)


Estado 35

    1 Programa: ListaFuncoes BlocoPrincipal .

    $padrão  reduzir usando a regra 1 (Programa)


Estado 36

    5 Funcao: TipoRetorno T_ID . T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES BlocoPrincipal

    T_ABRE_PARENTESES  deslocar, e ir ao estado 59


Estado 37

   36 CmdSe: T_IF T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES Bloco
   37      | T_IF T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES Bloco T_ELSE Bloco

    T_SUBTRACAO        deslocar, e ir ao estado 41
    T_ABRE_PARENTESES  deslocar, e ir ao estado 60
    T_ID               deslocar, e ir ao estado 43
    T_NUM              deslocar, e ir ao estado 45
    T_NOT              deslocar, e ir ao estado 61
    T_TRUE             deslocar, e ir ao estado 62
    T_FALSE            deslocar, e ir ao estado 63

    ChamadaFuncao         ir ao estado 46
    ExpressaoAritmetica   ir ao estado 64
    TExpressaoAritmetica  ir ao estado 48
    FExpressaoAritmetica  ir ao estado 49
    ExpressaoLogica       ir ao estado 65
    FExpressaoLogica      ir ao estado 66
    ExpressaoRelacional   ir ao estado 67


Estado 38

   38 CmdEnquanto: T_WHILE T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES Bloco

    T_SUBTRACAO        deslocar, e ir ao estado 41
    T_ABRE_PARENTESES  deslocar, e ir ao estado 60
    T_ID               deslocar, e ir ao estado 43
    T_NUM              deslocar, e ir ao estado 45
    T_NOT              deslocar, e ir ao estado 61
    T_TRUE             deslocar, e ir ao estado 62
    T_FALSE            deslocar, e ir ao estado 63

    ChamadaFuncao         ir ao estado 46
    ExpressaoAritmetica   ir ao estado 64
    TExpressaoAritmetica  ir ao estado 48
    FExpressaoAritmetica  ir ao estado 49
    ExpressaoLogica       ir ao estado 68
    FExpressaoLogica      ir ao estado 66
    ExpressaoRelacional   ir ao estado 67


Estado 39

   41 CmdEscrita: T_PRINT CmdEscritaMarcadorI . T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   42           | T_PRINT CmdEscritaMarcadorI . T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ABRE_PARENTESES  deslocar, e ir ao estado 69


Estado 40

   44 CmdLeitura: T_READ T_ABRE_PARENTESES . T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ID  deslocar, e ir ao estado 70


Estado 41

   63 FExpressaoAritmetica: T_SUBTRACAO . FExpressaoAritmetica

    T_SUBTRACAO        deslocar, e ir ao estado 41
    T_ABRE_PARENTESES  deslocar, e ir ao estado 42
    T_ID               deslocar, e ir ao estado 71
    T_NUM              deslocar, e ir ao estado 45

    FExpressaoAritmetica  ir ao estado 72


Estado 42

   62 FExpressaoAritmetica: T_ABRE_PARENTESES . ExpressaoAritmetica T_FECHA_PARENTESES

    T_SUBTRACAO        deslocar, e ir ao estado 41
    T_ABRE_PARENTESES  deslocar, e ir ao estado 42
    T_ID               deslocar, e ir ao estado 43
    T_NUM              deslocar, e ir ao estado 45

    ChamadaFuncao         ir ao estado 46
    ExpressaoAritmetica   ir ao estado 73
    TExpressaoAritmetica  ir ao estado 48
    FExpressaoAritmetica  ir ao estado 49


Estado 43

   46 ChamadaFuncao: T_ID . T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   47              | T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES
   65 FExpressaoAritmetica: T_ID .

    T_ABRE_PARENTESES  deslocar, e ir ao estado 51

    $padrão  reduzir usando a regra 65 (FExpressaoAritmetica)


Estado 44

   35 Retorno: T_RETURN T_LITERAL . T_PONTO_E_VIRGULA

    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 74


Estado 45

   64 FExpressaoAritmetica: T_NUM .

    $padrão  reduzir usando a regra 64 (FExpressaoAritmetica)


Estado 46

   61 TExpressaoAritmetica: ChamadaFuncao .

    $padrão  reduzir usando a regra 61 (TExpressaoAritmetica)


Estado 47

   34 Retorno: T_RETURN ExpressaoAritmetica . T_PONTO_E_VIRGULA
   52 ExpressaoAritmetica: ExpressaoAritmetica . T_ADICAO TExpressaoAritmetica
   53                    | ExpressaoAritmetica . T_SUBTRACAO TExpressaoAritmetica
   54                    | ExpressaoAritmetica . T_BIT_DIREITA TExpressaoAritmetica
   55                    | ExpressaoAritmetica . T_BIT_ESQUERDA TExpressaoAritmetica

    T_BIT_DIREITA      deslocar, e ir ao estado 75
    T_BIT_ESQUERDA     deslocar, e ir ao estado 76
    T_ADICAO           deslocar, e ir ao estado 77
    T_SUBTRACAO        deslocar, e ir ao estado 78
    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 79


Estado 48

   56 ExpressaoAritmetica: TExpressaoAritmetica .
   57 TExpressaoAritmetica: TExpressaoAritmetica . T_MULTIPLICACAO FExpressaoAritmetica
   58                     | TExpressaoAritmetica . T_DIVISAO FExpressaoAritmetica
   59                     | TExpressaoAritmetica . T_RESTO FExpressaoAritmetica

    T_MULTIPLICACAO  deslocar, e ir ao estado 80
    T_DIVISAO        deslocar, e ir ao estado 81
    T_RESTO          deslocar, e ir ao estado 82

    $padrão  reduzir usando a regra 56 (ExpressaoAritmetica)


Estado 49

   60 TExpressaoAritmetica: FExpressaoAritmetica .

    $padrão  reduzir usando a regra 60 (TExpressaoAritmetica)


Estado 50

   39 CmdAtrib: T_ID T_IGUAL . ExpressaoAritmetica T_PONTO_E_VIRGULA
   40         | T_ID T_IGUAL . T_LITERAL T_PONTO_E_VIRGULA

    T_SUBTRACAO        deslocar, e ir ao estado 41
    T_ABRE_PARENTESES  deslocar, e ir ao estado 42
    T_ID               deslocar, e ir ao estado 43
    T_LITERAL          deslocar, e ir ao estado 83
    T_NUM              deslocar, e ir ao estado 45

    ChamadaFuncao         ir ao estado 46
    ExpressaoAritmetica   ir ao estado 84
    TExpressaoAritmetica  ir ao estado 48
    FExpressaoAritmetica  ir ao estado 49


Estado 51

   46 ChamadaFuncao: T_ID T_ABRE_PARENTESES . ListaParametros T_FECHA_PARENTESES
   47              | T_ID T_ABRE_PARENTESES . T_FECHA_PARENTESES

    T_SUBTRACAO         deslocar, e ir ao estado 41
    T_ABRE_PARENTESES   deslocar, e ir ao estado 42
    T_FECHA_PARENTESES  deslocar, e ir ao estado 85
    T_ID                deslocar, e ir ao estado 43
    T_LITERAL           deslocar, e ir ao estado 86
    T_NUM               deslocar, e ir ao estado 45

    ChamadaFuncao         ir ao estado 46
    ListaParametros       ir ao estado 87
    ExpressaoAritmetica   ir ao estado 88
    TExpressaoAritmetica  ir ao estado 48
    FExpressaoAritmetica  ir ao estado 49


Estado 52

   16 Declaracoes: Declaracoes Declaracao .

    $padrão  reduzir usando a regra 16 (Declaracoes)


Estado 53

   14 BlocoPrincipal: T_ABRE_CHAVES Declaracoes ListaCmd . T_FECHA_CHAVES
   25 ListaCmd: ListaCmd . Comando

    T_FECHA_CHAVES  deslocar, e ir ao estado 89
    T_IF            deslocar, e ir ao estado 14
    T_WHILE         deslocar, e ir ao estado 15
    T_PRINT         deslocar, e ir ao estado 16
    T_READ          deslocar, e ir ao estado 17
    T_RETURN        deslocar, e ir ao estado 18
    T_ID            deslocar, e ir ao estado 19

    Comando        ir ao estado 57
    Retorno        ir ao estado 25
    CmdSe          ir ao estado 26
    CmdEnquanto    ir ao estado 27
    CmdAtrib       ir ao estado 28
    CmdEscrita     ir ao estado 29
    CmdLeitura     ir ao estado 30
    ChamadaProc    ir ao estado 31
    ChamadaFuncao  ir ao estado 32


Estado 54

   23 ListaId: T_ID .

    $padrão  reduzir usando a regra 23 (ListaId)


Estado 55

   18 Declaracao: Tipo ListaId . T_PONTO_E_VIRGULA
   22 ListaId: ListaId . T_VIRGULA T_ID

    T_VIRGULA          deslocar, e ir ao estado 90
    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 91


Estado 56

   15 BlocoPrincipal: T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES .

    $padrão  reduzir usando a regra 15 (BlocoPrincipal)


Estado 57

   25 ListaCmd: ListaCmd Comando .

    $padrão  reduzir usando a regra 25 (ListaCmd)


Estado 58

   45 ChamadaProc: ChamadaFuncao T_PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 45 (ChamadaProc)


Estado 59

    5 Funcao: TipoRetorno T_ID T_ABRE_PARENTESES . DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno T_ID T_ABRE_PARENTESES . T_FECHA_PARENTESES BlocoPrincipal

    T_FECHA_PARENTESES  deslocar, e ir ao estado 92
    T_INT               deslocar, e ir ao estado 11
    T_DOUBLE            deslocar, e ir ao estado 12
    T_STRING            deslocar, e ir ao estado 13

    DeclParametros  ir ao estado 93
    Parametro       ir ao estado 94
    Tipo            ir ao estado 95


Estado 60

   62 FExpressaoAritmetica: T_ABRE_PARENTESES . ExpressaoAritmetica T_FECHA_PARENTESES
   70 FExpressaoLogica: T_ABRE_PARENTESES . FExpressaoLogica T_FECHA_PARENTESES

    T_SUBTRACAO        deslocar, e ir ao estado 41
    T_ABRE_PARENTESES  deslocar, e ir ao estado 60
    T_ID               deslocar, e ir ao estado 43
    T_NUM              deslocar, e ir ao estado 45
    T_NOT              deslocar, e ir ao estado 61
    T_TRUE             deslocar, e ir ao estado 62
    T_FALSE            deslocar, e ir ao estado 63

    ChamadaFuncao         ir ao estado 46
    ExpressaoAritmetica   ir ao estado 96
    TExpressaoAritmetica  ir ao estado 48
    FExpressaoAritmetica  ir ao estado 49
    FExpressaoLogica      ir ao estado 97
    ExpressaoRelacional   ir ao estado 67


Estado 61

   69 FExpressaoLogica: T_NOT . FExpressaoLogica

    T_SUBTRACAO        deslocar, e ir ao estado 41
    T_ABRE_PARENTESES  deslocar, e ir ao estado 60
    T_ID               deslocar, e ir ao estado 43
    T_NUM              deslocar, e ir ao estado 45
    T_NOT              deslocar, e ir ao estado 61
    T_TRUE             deslocar, e ir ao estado 62
    T_FALSE            deslocar, e ir ao estado 63

    ChamadaFuncao         ir ao estado 46
    ExpressaoAritmetica   ir ao estado 64
    TExpressaoAritmetica  ir ao estado 48
    FExpressaoAritmetica  ir ao estado 49
    FExpressaoLogica      ir ao estado 98
    ExpressaoRelacional   ir ao estado 67


Estado 62

   71 FExpressaoLogica: T_TRUE .

    $padrão  reduzir usando a regra 71 (FExpressaoLogica)


Estado 63

   72 FExpressaoLogica: T_FALSE .

    $padrão  reduzir usando a regra 72 (FExpressaoLogica)


Estado 64

   52 ExpressaoAritmetica: ExpressaoAritmetica . T_ADICAO TExpressaoAritmetica
   53                    | ExpressaoAritmetica . T_SUBTRACAO TExpressaoAritmetica
   54                    | ExpressaoAritmetica . T_BIT_DIREITA TExpressaoAritmetica
   55                    | ExpressaoAritmetica . T_BIT_ESQUERDA TExpressaoAritmetica
   74 ExpressaoRelacional: ExpressaoAritmetica . T_MAIOR ExpressaoAritmetica
   75                    | ExpressaoAritmetica . T_MENOR ExpressaoAritmetica
   76                    | ExpressaoAritmetica . T_MAIOR_IGUAL ExpressaoAritmetica
   77                    | ExpressaoAritmetica . T_MENOR_IGUAL ExpressaoAritmetica
   78                    | ExpressaoAritmetica . T_IGUAL_IGUAL ExpressaoAritmetica
   79                    | ExpressaoAritmetica . T_DIFERENTE ExpressaoAritmetica

    T_BIT_DIREITA   deslocar, e ir ao estado 75
    T_BIT_ESQUERDA  deslocar, e ir ao estado 76
    T_ADICAO        deslocar, e ir ao estado 77
    T_SUBTRACAO     deslocar, e ir ao estado 78
    T_MAIOR_IGUAL   deslocar, e ir ao estado 99
    T_MENOR_IGUAL   deslocar, e ir ao estado 100
    T_DIFERENTE     deslocar, e ir ao estado 101
    T_IGUAL_IGUAL   deslocar, e ir ao estado 102
    T_MAIOR         deslocar, e ir ao estado 103
    T_MENOR         deslocar, e ir ao estado 104


Estado 65

   36 CmdSe: T_IF T_ABRE_PARENTESES ExpressaoLogica . T_FECHA_PARENTESES Bloco
   37      | T_IF T_ABRE_PARENTESES ExpressaoLogica . T_FECHA_PARENTESES Bloco T_ELSE Bloco
   66 ExpressaoLogica: ExpressaoLogica . T_AND FExpressaoLogica
   67                | ExpressaoLogica . T_OR FExpressaoLogica

    T_FECHA_PARENTESES  deslocar, e ir ao estado 105
    T_AND               deslocar, e ir ao estado 106
    T_OR                deslocar, e ir ao estado 107


Estado 66

   68 ExpressaoLogica: FExpressaoLogica .

    $padrão  reduzir usando a regra 68 (ExpressaoLogica)


Estado 67

   73 FExpressaoLogica: ExpressaoRelacional .

    $padrão  reduzir usando a regra 73 (FExpressaoLogica)


Estado 68
